fixing spacing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,21 @@
 @import './base.css';
 
+html, body{
+  height: 100%;
+}
+
+body{
+  background-color: #0b0909;
+  transition: background-color 0.5s ease-out;
+}
+
 #app {
   padding: 2rem;
   font-weight: normal;
   min-height: 100vh;
   display:flex;
   flex-direction: column;
+  height:100%;
 }
 
 .blurp{
@@ -25,6 +35,7 @@ a,
   transition: 0.4s;
 }
 
+
 @keyframes fadeIt {
   0%   { opacity: 0; }
   100% { background-color: 1; }
@@ -32,6 +43,29 @@ a,
 
 .OpacityUp{    
     animation: fadeIt 0.5s ease-in-out forwards; 
+}
+
+.gallery{
+  margin-top:2rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  margin-bottom:2rem;
+}
+
+.gallery a{
+  width: 100%;
+  height: 100%;
+  max-width: 374px;
+  object-fit: cover;
+ }
+
+.gallery a img{
+ width: 100%;
+ height: 100%;
+ object-fit: cover;
 }
 
 @media (hover: hover) {
@@ -44,7 +78,10 @@ a,
   body {
     display: flex;
     place-items: center;
-    background-color: #0b0a0a;
+  }
+
+  .gallery{
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   #app {
